# coonspect-dev

./: .env.example  .env.test  .gitignore  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: lecture.py
backend/app/api/v1/schemas/: lecture.py
backend/app/common/: constants.py  settings.py
backend/app/domain/entities/: lecture.py  value_objects.py
backend/app/domain/interfaces/: lecture_repo.py
backend/app/infra/: ioc.py
backend/app/infra/mongo/: client.py
backend/app/infra/redis/: client.py
backend/app/infra/repositories/mongo/: lecture.py
backend/app/infra/taskiq/: broker.py
backend/app/tasks/: lecture.py
backend/scripts/: lint.sh  test.sh
backend/tests/: conftest.py  test_repo.py
backend/tests/api/: test_endpoints.py
backend/tests/integration/: test_repo.py  test_tasks.py
backend/tests/unit/: test_lecture_entity.py  test_settings.py
stt-service/: .dockerignore  Dockerfile  Makefile  pyproject.toml
stt-service/app/: main.py
stt-service/app/domain/: entities.py  exceptions.py  interfaces.py  value_objects.py
stt-service/app/domain/services/: transcription_service.py
