[project]
name = "stt-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "dishka>=1.8.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pyannote-audio>=4.0.4",
    "pydantic-settings>=2.13.0",
    "redis>=7.2.0",
    "sentencepiece>=0.2.1",
    "taskiq-redis>=1.2.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]
