[project]
name = "stt-service"
version = "0.1.0"
requires-python = ">=3.14"

# DEPENDENCIES

dependencies = [
    "aioboto3>=15.5.0",
    "dishka>=1.8.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pyannote-audio>=4.0.4",
    "pydantic-settings>=2.13.0",
    "redis>=7.2.0",
    "sentencepiece>=0.2.1",
    "taskiq-redis>=1.2.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
]

# RUFF

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort 
    "B",   # flake8-bugbear 
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade 
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MYPY

[tool.mypy]
python_version = "3.14"
strict = true

mypy_path = "."
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "aioboto3.*",
    "taskiq_redis.*"
]
ignore_missing_imports = true